ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • ava-logs.log
    • ava-doctor-report.json
    • ava-apps-tools-cache.json (if available)
    • ava-app-directory-cache.json (if available)
    • auto-review-rollout-thread-1.jsonl
    • ava-connectivity-diagnostics.txt


› 1. Yes  Share the current Ava session logs and diagnostics with the team for
          troubleshooting.
  2. No

  enter select · esc back
